default/objects/NVMConnect__Settings__c/NVMConnect__Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Deprecated Settings</label>
</CustomObject>