default/objects/NVMConnect__Settings__c/fields/NVMConnect__baseURL__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__baseURL__c</fullName>
    <inlineHelpText>URL used to access ContactWorld API.  Please ensure that it is in the list of allowed Remote Sites.</inlineHelpText>
    <label>Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>