default/objects/NVMConnect__Settings__c/fields/NVMConnect__callTimeOutMS__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__callTimeOutMS__c</fullName>
    <defaultValue>20000</defaultValue>
    <inlineHelpText>API call time out time in milliseconds</inlineHelpText>
    <label>Call Time Out (ms)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>