default/objects/NVMConnect__Settings__c/fields/NVMConnect__clientId__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__clientId__c</fullName>
    <inlineHelpText>Client Id</inlineHelpText>
    <label>Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>