default/objects/NVMConnect__Settings__c/fields/NVMConnect__clientSecret__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__clientSecret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>