default/objects/NVMConnect__Settings__c/fields/NVMConnect__Flags__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Flags__c</fullName>
    <inlineHelpText>Optional control flags</inlineHelpText>
    <label>Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>